@@ -67,3 +67,12 @@ assert_finish 5, %q{
   end
 }, '[ruby-core:21696]'
 
+assert_equal 'A::C', %q{
+  open("zzz.rb", "w") {}
+  class A
+    autoload :C, "zzz"
+    class C
+    end
+    C
+  end
+}
